<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".view.FragmentList">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/emovies"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/upcoming_movies"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/upcoming_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/upcoming_movies"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/nestedScrollViewUpcoming"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nestedScrollViewUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/top_rated_movies"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/upcoming_movies"
                    tools:ignore="SpeakableTextPresentCheck">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/upcoming_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layoutAnimation="@anim/layout_animation"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintBottom_toTopOf="@id/top_rated_movies"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/upcoming_movies"
                        tools:visibility="visible" />
                </androidx.core.widget.NestedScrollView>


                <TextView
                    android:id="@+id/top_rated_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/top_rated_movies"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/nestedScrollViewTopRated"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nestedScrollViewUpcoming" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nestedScrollViewTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/top_rated_movies"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/top_rated_movies"
                    tools:ignore="SpeakableTextPresentCheck">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_rated_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutAnimation="@anim/layout_animation"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:visibility="visible" />
                </androidx.core.widget.NestedScrollView>

                <TextView
                    android:id="@+id/recomended_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/your_recomendation"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/toogleButtonGroup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nestedScrollViewTopRated"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recomended_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layoutAnimation="@anim/layout_animation"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toogleButtonGroup"
                    app:spanCount="2"
                    tools:visibility="visible" />

                <RadioGroup
                    android:id="@+id/toogleButtonGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/recomended_recycler"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recomended_movies">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/languaje_button"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:background="@drawable/languaje_btn_selector"
                        android:button="@android:color/transparent"
                        android:checked="false"
                        android:gravity="center"
                        android:text="@string/japanese"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toTopOf="@id/recomended_movies"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.076"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recomended_recycler"
                        app:layout_constraintVertical_bias="0.458" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/released_button"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:background="@drawable/releases_btn_selector"
                        android:button="@android:color/transparent"
                        android:checked="false"
                        android:gravity="center"
                        android:text="@string/releases_2022"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toTopOf="@id/recomended_movies"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.076"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recomended_recycler"
                        app:layout_constraintVertical_bias="0.458" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
